# color-scheme-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_SETUP_COMPARISON.md  DRY_RUN_COMPLETION_SUMMARY.md  Makefile  QUICK_START.md  README.md  SHOW_CONTAINERIZATION.md  TESTING_SUMMARY.md  TODO-TEST-SUITE-AUDIT-AND-COVERAGE-IMPROVEMENT.md  TOOL_CONFIGURATION.md  mkdocs.yml  package-lock.json  pyproject.toml  settings.toml  test-all-commands.sh
.github/: pull_request_template.md
.github/scripts/: check-docs.py
.github/workflows/: ci-core.yml  ci-orchestrator.yml  ci-settings.yml  ci-templates.yml  smoke-test-custom.yml  smoke-test-pywal.yml  smoke-test-wallust.yml  smoke-tests.yml  verify-compliance.yml  verify-docs.yml
_archive_old_implementation/: README.md  pyproject.toml  test.py
_archive_old_implementation/reference/core/: Makefile  README.md  pyproject.toml
_archive_old_implementation/reference/core/src/colorscheme_generator/: cli.py
_archive_old_implementation/reference/core/src/colorscheme_generator/backends/: custom.py  pywal.py  wallust.py
_archive_old_implementation/reference/core/src/colorscheme_generator/config/: enums.py
_archive_old_implementation/reference/core/src/colorscheme_generator/core/: types.py
_archive_old_implementation/reference/core/src/colorscheme_generator/core/managers/: output_manager.py
_archive_old_implementation/reference/core/src/colorscheme_generator/logging/: __init__.py  config.py
_archive_old_implementation/reference/core/src/colorscheme_generator/services/: __init__.py  generation.py
_archive_old_implementation/reference/core/src/colorscheme_generator/templates/: colors.scss.j2
_archive_old_implementation/reference/core/tests/: conftest.py  test_cli.py  test_cli_overrides.py  test_exceptions.py
_archive_old_implementation/reference/shared/: Makefile  pyproject.toml
_archive_old_implementation/reference/shared/src/colorscheme_shared/: __init__.py
_archive_old_implementation/reference/shared/src/colorscheme_shared/cli/: __init__.py  backends.py
_archive_old_implementation/reference/shared/src/colorscheme_shared/logging/: __init__.py  config.py
_archive_old_implementation/reference/shared/src/colorscheme_shared/utils/: __init__.py  paths.py  validation.py
_archive_old_implementation/reference/shared/tests/: __init__.py  conftest.py  test_backends.py  test_logging.py  test_utils.py
_archive_old_implementation/scripts/: phase-gate-check.sh  setup-dev.sh  utils.sh
_archive_old_implementation/src/color_scheme/: __init__.py  main.py
_archive_old_implementation/src/color_scheme/cli/: __init__.py  main.py
_archive_old_implementation/src/color_scheme/cli/commands/: install.py  uninstall.py
_archive_old_implementation/src/color_scheme/cli/config/: settings.py
_archive_old_implementation/src/color_scheme/cli/utils/: reusable_cli_options.py  utils.py
_archive_old_implementation/src/color_scheme/shared/config/: logging.py
core/: Makefile  README.md  pyproject.toml
core/docs/: README.md  architecture.md  configuration.md  development.md  templates.md  user-guide.md
core/docs/api/: README.md
core/tests/: test_output_manager.py  test_pywal_backend.py  test_types.py  test_wallust_backend.py
docs/: DOCUMENTATION_GUIDELINES.md  GAP-ANALYSIS-REPORT.md  MAKEFILE_GUIDE.md  PRE-COMMIT-SETUP.md  README.md  audit-2026-02-23.md  changelog.md  implementation-progress.md  index.md
docs/architecture/: overview.md
docs/archive/: README.md  audit-2026-02-20.md
docs/development/: contributing.md  getting-started.md  testing.md  verification-guide.md
docs/explanation/: architecture.md
docs/explanations/: integration-patterns.md
docs/how-to/: configure-backends.md  configure-settings.md  contribute.md  create-templates.md  install-backends.md  integrate-shell.md  troubleshoot-errors.md  use-dry-run.md
docs/plans/: 2026-01-18-monorepo-architecture-design.md  2026-01-18-verification-infrastructure.md  2026-01-20-phase1-foundation.md  2026-01-25-phase2-backends.md  2026-01-26-phase3-output-generation.md  2026-01-28-phase4-orchestrator.md  2026-01-29-settings-layered-architecture.md  2026-01-30-settings-layered-architecture.md  2026-01-30-settings-layered-implementation.md  2026-02-23-investigation-framework-docs-design.md  2026-02-23-investigation-framework-docs.md  2026-02-25-mkdocs-migration-design.md  2026-02-25-mkdocs-migration.md  2026-03-06-show-containerization-design.md  2026-03-06-show-containerization.md
docs/reference/: cli-core.md  cli-orchestrator.md  enums.md  exceptions.md  makefile.md  settings-api.md  types.md
docs/templates/: adr-template.md  error-entry-template.md
docs/troubleshooting/: error-database.md
docs/tutorials/: container-setup.md  first-color-scheme.md  getting-started.md  quick-start.md
docs/user-guide/: installation.md
orchestrator/: Makefile  README.md  pyproject.toml
orchestrator/docker/: Dockerfile.custom  Dockerfile.pywal  Dockerfile.wallust
orchestrator/docs/: README.md  api-reference.md  architecture.md  argument-passthrough.md  cli-reference.md  configuration.md  container-lifecycle.md  developer-guide.md  index.md  quick-start.md  runtime-detection.md
orchestrator/tests/: __init__.py  test_cli.py  test_config.py  test_passthrough.py
scripts/: README.md  setup-dev.sh  verify-design-compliance.sh  verify-documentation.sh
tests/smoke/: README.md  run-smoke-tests.sh
tools/: test-all-commands.sh
(+169 files in other folders)
