[project]
name = "color-scheme-workspace"
version = "0.1.0"
description = "Workspace root for color-scheme monorepo"
requires-python = ">=3.12"
dependencies = [
    "color-scheme-settings",
    "color-scheme-templates",
    "color-scheme-core",
    "color-scheme-orchestrator",
]

[tool.uv.workspace]
members = [
    "packages/settings",
    "packages/templates",
    "packages/core",
    "packages/orchestrator",
]

[tool.uv.sources]
color-scheme-settings = { workspace = true }
color-scheme-templates = { workspace = true }
color-scheme-core = { workspace = true }
color-scheme-orchestrator = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.0",
    "black>=26.0.0",
    "ruff>=0.14.0",
    "isort>=7.0.0",
    "bandit>=1.8.6",
    "pre-commit>=3.8.0",
    "pywal>=3.3.0",
]

# Tool configuration (shared across workspace)
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n auto --color=yes --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
